application is now more in line with other chaos apps

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -24,12 +24,11 @@
         color: red;
       }
       .brand-logo{
-        padding-left: 20px;
+        padding-left: 20px !important;
       }
       nav{
         background-color: #ff6600;
       }
-      
       html{
         background-color: #f9fcff;
       }
